--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vidtube.com</title>
+    <title>Vidtube sharing website-Youtube channel</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="flex-div">
+            <div class="nav-left flex-div">
+                <img src="/img/menu.png" alt="menu" class="menu-icon">
+                <img src="/img/logo.png" alt="logo" class="logo">
+            </div>
+            <div class="nav-middle flex-div">
+                <div class="search-box flex-div">
+                    <input type="text" placeholder="Search">
+                    <img src="/img/search.png" alt="">
+                </div>
+                <img src="/img/voice-search.png" alt="" class="mic-icon">
+            </div>
+            <div class="nav-right flex-div">
+                <img src="/img/upload.png" alt="">
+                <img src="/img/more.png" alt="">
+                <img src="/img/notification.png" alt="">
+                <img src="/img/Jack.png" alt="" class="user-icon">
+            </div>
+        </nav>
+    </header>
+
+
     <script src="/js/script.js"></script>
 </body>
 </html>
