--- a/index.html
+++ b/index.html
@@ -1,35 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vidtube sharing website-Youtube channel</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="flex-div">
-            <div class="nav-left flex-div">
-                <img src="/img/menu.png" alt="menu" class="menu-icon">
-                <img src="/img/logo.png" alt="logo" class="logo">
-            </div>
-            <div class="nav-middle flex-div">
-                <div class="search-box flex-div">
-                    <input type="text" placeholder="Search">
-                    <img src="/img/search.png" alt="">
-                </div>
-                <img src="/img/voice-search.png" alt="" class="mic-icon">
-            </div>
-            <div class="nav-right flex-div">
-                <img src="/img/upload.png" alt="">
-                <img src="/img/more.png" alt="">
-                <img src="/img/notification.png" alt="">
-                <img src="/img/Jack.png" alt="" class="user-icon">
-            </div>
-        </nav>
+      <nav class="flex-div">
+        <div class="nav-left flex-div">
+          <img src="/img/menu.png" alt="menu" class="menu-icon" />
+          <img src="/img/logo.png" alt="logo" class="logo" />
+        </div>
+        <div class="nav-middle flex-div">
+          <div class="search-box flex-div">
+            <input type="text" placeholder="Search" />
+            <img src="/img/search.png" alt="" />
+          </div>
+          <img src="/img/voice-search.png" alt="" class="mic-icon" />
+        </div>
+        <div class="nav-right flex-div">
+          <img src="/img/upload.png" alt="" />
+          <img src="/img/more.png" alt="" />
+          <img src="/img/notification.png" alt="" />
+          <img src="/img/Jack.png" alt="" class="user-icon" />
+        </div>
+      </nav>
     </header>
-
+    <!-- --------------------------Sidebar------------- -->
+    <div class="sidebar">
+      <div class="shortcut-links">
+        <a href=""><img src="/img/home.png" alt="" />
+          <p>Home</p></a>
+        <a href=""><img src="/img/explore.png" alt="" />
+          <p>Explore</p></a>
+        <a href=""><img src="/img/subscriprion.png" alt="" />
+          <p>Subscription</p></a>
+        <a href=""><img src="/img/library.png" alt="" />
+          <p>Library</p></a>
+        <a href=""><img src="/img/history.png" alt="" />
+          <p>History</p></a>
+        <a href=""><img src="/img/cast.png" alt="" />
+          <p>Cast Videos</p></a>
+        <a href=""><img src="/img/playlist.png" alt="" />
+          <p>Playlist</p></a>
+        <a href=""><img src="/img/messages.png" alt="" />
+          <p>Messages</p></a>
+        <a href=""><img src="/img/show-more.png" alt="" />
+          <p>Show More</p></a>
+      </div>
+      <div class="subscribed-list">
+        <h3>SUBSCRIBED</h3>
+        <a href=""><img src="/img/Jack.png" alt="" />
+            <p>Jack Nicholas</p></a>
+        <a href=""><img src="/img/simon.png" alt="" />
+            <p>Simon Baker</p></a>
+        <a href=""><img src="/img/tom.png" alt="" />
+            <p>Tom Hardy</p></a>
+        <a href=""><img src="/img/megan.png" alt="" />
+            <p>Megan Ryan</p></a>
+        <a href=""><img src="/img/cameron.png" alt="" />
+            <p>Cameron Diaz</p></a>
+      </div>
+    </div>
 
     <script src="/js/script.js"></script>
-</body>
+  </body>
 </html>
