--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
       </div>
     </div>
 
+    <!-- ------------------------------MAIN------------ -->
+    <div class="container">
+      <div class="banner">
+        <img src="/img/banner.png" alt="">
+      </div>
+      <div class="list-container">
+        <div class="vid-list">
+          <!-- <img src="/img/thumbnail1.png" alt="" class="thumbnail1"> -->
+        </div>
+      </div>
+    </div>
+
     <script src="/js/script.js"></script>
   </body>
 </html>
