--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="/img/upload.png" alt="" />
           <img src="/img/more.png" alt="" />
           <img src="/img/notification.png" alt="" />
-          <img src="/img/Jack.png" alt="" class="user-icon" />
+          <img src="/img/Jack1.png" alt="" class="user-icon" />
         </div>
       </nav>
     </header>
@@ -52,7 +52,7 @@
       </div>
       <div class="subscribed-list">
         <h3>SUBSCRIBED</h3>
-        <a href=""><img src="/img/Jack.png" alt="" />
+        <a href=""><img src="/img/Jack1.png" alt="" />
             <p>Jack Nicholas</p></a>
         <a href=""><img src="/img/simon.png" alt="" />
             <p>Simon Baker</p></a>
