--- a/playvideo.html
+++ b/playvideo.html
@@ -28,5 +28,17 @@
           </div>
         </nav>
       </header>
+
+
+      <div class="container play-container">
+        <div class="row">
+          <div class="play-video">
+            <video controls>
+              <source src="/img/video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="right-sidebar"></div>
+        </div>
+      </div>
 </body>
 </html>
