--- a/playvideo.html
+++ b/playvideo.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Play Video - Top 10 place to visit in Nepal</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="flex-div">
-          <div class="nav-left flex-div">
-            <img src="/img/menu.png" alt="menu" class="menu-icon" />
-            <img src="/img/logo.png" alt="logo" class="logo" />
+      <nav class="flex-div">
+        <div class="nav-left flex-div">
+          <img src="/img/menu.png" alt="menu" class="menu-icon" />
+          <img src="/img/logo.png" alt="logo" class="logo" />
+        </div>
+        <div class="nav-middle flex-div">
+          <div class="search-box flex-div">
+            <input type="text" placeholder="Search" />
+            <img src="/img/search.png" alt="" />
           </div>
-          <div class="nav-middle flex-div">
-            <div class="search-box flex-div">
-              <input type="text" placeholder="Search" />
-              <img src="/img/search.png" alt="" />
+          <img src="/img/voice-search.png" alt="" class="mic-icon" />
+        </div>
+        <div class="nav-right flex-div">
+          <img src="/img/upload.png" alt="" />
+          <img src="/img/more.png" alt="" />
+          <img src="/img/notification.png" alt="" />
+          <img src="/img/Jack1.png" alt="" class="user-icon" />
+        </div>
+      </nav>
+    </header>
+
+    <div class="container play-container">
+      <div class="row">
+        <div class="play-video">
+          <video controls>
+            <source src="/img/video.mp4" type="video/mp4" />
+          </video>
+        </div>
+        <div class="rightSidebar">
+          <div class="side-video-list">
+            <a href="#">
+              <img src="/img/thumbnail1.png" />
+            </a>
+            <div class="vid-info">
+              <a href="#">Best channel that help you to be a web developer</a>
+              <p>Easy Tutorials</p>
+              <p>15k Views</p>
             </div>
-            <img src="/img/voice-search.png" alt="" class="mic-icon" />
           </div>
-          <div class="nav-right flex-div">
-            <img src="/img/upload.png" alt="" />
-            <img src="/img/more.png" alt="" />
-            <img src="/img/notification.png" alt="" />
-            <img src="/img/Jack1.png" alt="" class="user-icon" />
-          </div>
-        </nav>
-      </header>
-
-
-      <div class="container play-container">
-        <div class="row">
-          <div class="play-video">
-            <video controls>
-              <source src="/img/video.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="right-sidebar"></div>
         </div>
       </div>
-</body>
+    </div>
+  </body>
 </html>
