Play-video page

--- a/playvideo.html
+++ b/playvideo.html
@@ -37,8 +37,8 @@
           </video>
         </div>
         <div class="rightSidebar">
-          <div class="side-video-list">
-            <a href="#">
+          <!-- <div class="side-video-list">
+            <a href="#" class="small-thumbnail">
               <img src="/img/thumbnail1.png" />
             </a>
             <div class="vid-info">
@@ -46,9 +46,10 @@
               <p>Easy Tutorials</p>
               <p>15k Views</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
