--- a/playvideo.html
+++ b/playvideo.html
@@ -35,6 +35,24 @@
           <video controls>
             <source src="/img/video.mp4" type="video/mp4" />
           </video>
+          <div class="tags">
+            <a href="#">#Coding</a>
+            <a href="#">#JavaScript</a>
+            <a href="#">#HTMl</a>
+            <a href="#">#CSS</a>
+          </div>
+          <h3>Top 10 most beautiful places to visit in Nepal.</h3>
+          <div class="play-video-info">
+            <p>1223 Views &bull; 2 days ago</p>
+            <div>
+              <a href=""><img src="/img/like.png" alt="">125</a>
+              <a href=""><img src="/img/dislike.png" alt="">125</a>
+              <a href=""><img src="/img/share.png" alt="">125</a>
+              <a href=""><img src="/img/save.png" alt="">125</a>
+            </div>
+          </div>
+          <hr>
+
         </div>
         <div class="rightSidebar">
           <!-- <div class="side-video-list">
